Edit First page responsive

--- a/2cards.html
+++ b/2cards.html
@@ -46,7 +46,7 @@
               <a class="nav-link2 menu-index" href="#">ปริญญาเอก</a>
             </li>
             <li class="dropdown">
-            <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย<b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a class="drop-selector" href="#">ภาษาไทย</a></li>
               <li><a class="drop-selector" href="#">English</a></li>
@@ -145,119 +145,33 @@
               <a id="aTag" href="javascript:toggleAndChangeText();">
                 <i class="fa fa-angle-down" aria-hidden="true"></i>&nbsp;ทุนกู้ยืม
               </a>
-              <div id="divToToggle" class="row cards-section">
+              <div id="divToToggle" class="row">
                 <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card"  href="#">
-                        <span class="topcard">
-                          <p class="name-details">ทุนการศึกษาเอสโซ่</p>
-                          <p class="name-details-caption">สมโภชกรุงรัตนโกสินทร์ 200 ปี</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/Esso_textlogo.png">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
-                        </span>
-                        <span>
-                          <p>10,000 บาท</p>
-                          <p>23 ส.ค. - 14 ก.ย. 2560</p>
-                        </span>
-                      </a>
-                  </div>
-                </div>
-
-                <div class="col-md-4 col-sm-3 placeholder">
+<!-- <div class="card">
+  <div class="topcard">
+    <p>Fleece Marigold</p>
+  </div>
+</div> -->
                   <div>
                       <a class="card" href="#">
                         <span class="topcard">
-                          <p class="name-details">ทุนการศึกษาคาวาซากิ</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kawasaki.png">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
                         </span>
                       </a>
                   </div>
                 </div>
 
                 <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
-                          <p class="name-details-caption">กยศ.</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kys.jpg">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
-                        </span>
-                      </a>
-                  </div>
+                  <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
                 </div>
 
                 <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
-                          <p class="name-details-caption">กยศ.</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kys.jpg">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
-                        </span>
-                      </a>
-                  </div>
+                  <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
                 </div>
 
                 <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
-                          <p class="name-details-caption">กยศ.</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kys.jpg">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
-                        </span>
-                      </a>
-                  </div>
+                  <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
                 </div>
-
-                <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
-                          <p class="name-details-caption">กยศ.</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kys.jpg">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
-                        </span>
-                      </a>
-                  </div>
-                </div>
-
-              </div> <!-- to toggle -->
+              </div>
             </div>
           </section>
 
@@ -280,43 +194,112 @@
                   <td>ทุนจ้างงาน</td>
                   <td>วันนี้ - 31 พ.ค. 2560</td>
                   <td>100,000 บาท</td>
-                </tr>   
-                <tr>
-                  <td>ทุนเงินยืมเพื่อการศึกษา<br>สำหรับนักศึกษา มจธ.</td>
-                  <td>ทุกคณะ</td>
-                  <td>ทุนกู้ยืม </td>
-                  <td>ตลอดปีการศึกษา 2560</td>
-                  <td>แล้วแต่กรณี</td>
                 </tr>
                 <tr>
-                  <td>ทุนเพชรพระจอมเกล้า<br>ปริญญาตรี</td>
-                  <td>ทุกคณะ</td>
-                  <td>ทุนให้เปล่า</td>
-                  <td>ตลอดปีการศึกษา 2560</td>
-                  <td>220,000 บาท (2 ปี)</td>
+                  <td>1,002</td>
+                  <td>amet</td>
+                  <td>consectetur</td>
+                  <td>adipiscing</td>
+                  <td>elit</td>
                 </tr>
                 <tr>
-                  <td>ทุนเจียระไนเพชร</td>
-                  <td>ทุกคณะ</td>
-                  <td>ทุนให้เปล่า</td>
-                  <td>ตลอดปีการศึกษา 2560</td>
-                  <td>แล้วแต่กรณี</td>
+                  <td>1,003</td>
+                  <td>Integer</td>
+                  <td>nec</td>
+                  <td>odio</td>
+                  <td>Praesent</td>
                 </tr>
                 <tr>
-                  <td>ทุนการศึกษาคาวาซากิ</td>
-                  <td>ทุกคณะ</td>
-                  <td>ทุนให้เปล่า</td>
-                  <td>วันนี้ - 11 ส.ค. 2560</td>
-                  <td>50,000 บาท</td>
+                  <td>1,003</td>
+                  <td>libero</td>
+                  <td>Sed</td>
+                  <td>cursus</td>
+                  <td>ante</td>
                 </tr>
                 <tr>
-                  <td>ทุนการศึกษาเอสโซ่<br>สมโภชกรุงรัตนโกสินทร์ 200 ปี</td>
-                  <td>ทุกคณะ</td>
-                  <td>ทุนให้เปล่า</td>
-                  <td>23 ส.ค. - 14 ก.ย. 2560</td>
-                  <td>10,000 บาท</td>
+                  <td>1,004</td>
+                  <td>dapibus</td>
+                  <td>diam</td>
+                  <td>Sed</td>
+                  <td>nisi</td>
                 </tr>
-                
+                <tr>
+                  <td>1,005</td>
+                  <td>Nulla</td>
+                  <td>quis</td>
+                  <td>sem</td>
+                  <td>at</td>
+                </tr>
+                <tr>
+                  <td>1,006</td>
+                  <td>nibh</td>
+                  <td>elementum</td>
+                  <td>imperdiet</td>
+                  <td>Duis</td>
+                </tr>
+                <tr>
+                  <td>1,007</td>
+                  <td>sagittis</td>
+                  <td>ipsum</td>
+                  <td>Praesent</td>
+                  <td>mauris</td>
+                </tr>
+                <tr>
+                  <td>1,008</td>
+                  <td>Fusce</td>
+                  <td>nec</td>
+                  <td>tellus</td>
+                  <td>sed</td>
+                </tr>
+                <tr>
+                  <td>1,009</td>
+                  <td>augue</td>
+                  <td>semper</td>
+                  <td>porta</td>
+                  <td>Mauris</td>
+                </tr>
+                <tr>
+                  <td>1,010</td>
+                  <td>massa</td>
+                  <td>Vestibulum</td>
+                  <td>lacinia</td>
+                  <td>arcu</td>
+                </tr>
+                <tr>
+                  <td>1,011</td>
+                  <td>eget</td>
+                  <td>nulla</td>
+                  <td>Class</td>
+                  <td>aptent</td>
+                </tr>
+                <tr>
+                  <td>1,012</td>
+                  <td>taciti</td>
+                  <td>sociosqu</td>
+                  <td>ad</td>
+                  <td>litora</td>
+                </tr>
+                <tr>
+                  <td>1,013</td>
+                  <td>torquent</td>
+                  <td>per</td>
+                  <td>conubia</td>
+                  <td>nostra</td>
+                </tr>
+                <tr>
+                  <td>1,014</td>
+                  <td>per</td>
+                  <td>inceptos</td>
+                  <td>himenaeos</td>
+                  <td>Curabitur</td>
+                </tr>
+                <tr>
+                  <td>1,015</td>
+                  <td>sodales</td>
+                  <td>ligula</td>
+                  <td>in</td>
+                  <td>libero</td>
+                </tr>
               </tbody>
             </table>
           </div>
