--- a/detail.html
+++ b/detail.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger"  href="#"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
+        <a class="navbar-brand"  href="#"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
         <p class="logo-caption">Scholarship showroom</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="dropdown">
-            <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a class="drop-selector" href="#">ภาษาไทย</a></li>
               <li><a class="drop-selector" href="#">English</a></li>
@@ -73,53 +73,39 @@
           </div>
           <div class="jumbotron2">
             <h5>คุณสมบัติผู้ขอรับทุน</h5>
-            <p>1. เป็นผู้มีมีผลการเรียน หรือ
-2. มีความสามารถด้านกีฬา หรือ
-3. มีความสามารถด้านศิลปะวัฒนธรรม หรือ
-4. มีความสามารถด้านผู้นำ หรือ
+            <p>1. เป็นผู้มีมีผลการเรียน หรือ<br>
+2. มีความสามารถด้านกีฬา หรือ<br>
+3. มีความสามารถด้านศิลปะวัฒนธรรม หรือ<br>
+4. มีความสามารถด้านผู้นำ หรือ<br>
 5. มีความด้านนวัตกรรมและความคิดสร้างสรรค์</p>
           </div>
           <div class="jumbotron2">
             <h5>เอกสารประกอบการสมัคร</h5>
-            <p>1. ใบสมัครติดรูปถ่ายขนาด 1 นิ้ว 1 รูป (ใบสมัครพิมพ์ออกจากระบบรับสมัคร)
-**กรุณาระบุด้านความสามารถพิเศษที่ต้องการสมัคร มุมบนขวามือของใบสมัคร**
-2. สำเนาผลการเรียน 5 ภาคการศึกษา
-3. สำเนาบัตรประชาชน
-4. สำเนาทะเบียนบ้าน
-5. สำเนาแฟ้มสะสมผลงาน
+            <p>1. ใบสมัครติดรูปถ่ายขนาด 1 นิ้ว 1 รูป (ใบสมัครพิมพ์ออกจากระบบรับสมัคร)<br>
+**กรุณาระบุด้านความสามารถพิเศษที่ต้องการสมัคร มุมบนขวามือของใบสมัคร**<br>
+2. สำเนาผลการเรียน 5 ภาคการศึกษา<br>
+3. สำเนาบัตรประชาชน<br>
+4. สำเนาทะเบียนบ้าน<br>
+5. สำเนาแฟ้มสะสมผลงาน<br>
 **กรณีแฟ้มสะสมผลงานชำรุดหรือสูญหาย ไม่รับผิดชอบไม่ว่ากรณีใดๆทั้งสิ้น**</p>
           </div>
           <div class="jumbotron2">
             <h5>ขั้นตอนการสมัคร</h5>
-            <p>กรณีสมัครด้วยตนเอง
-1. สมัครขอรับทุนการศึกษาที่เว็บไซต์ admission.kmutt.ac.th กรอกรายละเอียดและแนบหลักฐานให้ครบถ้วน
-2. ส่งหลักฐานการสมัครที่ สำนักงานคัดเลือกและสรรหานักศึกษา อาคารสำนักงานอธิการบดี ชั้น 2
-3. ประกาศรายชื่อผู้มีสิทธิได้รับทุนที่ admission.kmutt.ac.th
-
-กรณีเสนอชื่อ
-1. คณะกรรมการและภาควิชาเสนอชื่อและหลักฐานประกอบการพิจารณาที่ กลุ่มงานช่วยเหลือทางการเงินแก่นักศึกษา โดยผู้สมัครต้องมีผลงานตามเงื่อนไขของทุน
+            <p>กรณีสมัครด้วยตนเองฒ<br>
+1. สมัครขอรับทุนการศึกษาที่เว็บไซต์ admission.kmutt.ac.th กรอกรายละเอียดและแนบหลักฐานให้ครบถ้วน<br>
+2. ส่งหลักฐานการสมัครที่ สำนักงานคัดเลือกและสรรหานักศึกษา อาคารสำนักงานอธิการบดี ชั้น 2<br>
+3. ประกาศรายชื่อผู้มีสิทธิได้รับทุนที่ admission.kmutt.ac.th<br>
+กรณีเสนอชื่อ<br>
+1. คณะกรรมการและภาควิชาเสนอชื่อและหลักฐานประกอบการพิจารณาที่ กลุ่มงานช่วยเหลือทางการเงินแก่นักศึกษา โดยผู้สมัครต้องมีผลงานตามเงื่อนไขของทุน<br>
 2. ประกาศรายชื่อผู้มีสิทธิรับทุนที่ admission.kmutt.ac.th</p>
           </div>
-          <div class="row">
-            <div class="col-6 col-lg-4">
-              <img class="detailsImg" src="images/poster.jpg">
-            </div>
-            <div class="col-6 col-lg-4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="col-6 col-lg-4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div><!--/span-->
-          </div><!--/row-->
-        </div><!--/span-->
+
+        </div><!--/col-12 col-md-9-->
 
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
           <a class="back-detail" href="#">&lt; กลับสู่หน้าค้นหา</a>
           <div class="list-group">
+            <p></p>
             <p>ทุนที่ลักษณะคล้ายกัน</p>
             <button class="buttonLists"><span>ทุนการศึกษาเอสโซ่ </span><p class="caption">สมโภชกรุงรัตนโกสินทร์ 200 ปี</p></button>
             <button class="buttonLists"><span>ทุนบุณรอด </span></button>
@@ -149,7 +135,6 @@
         </div><!--/span-->
       </div><!--/row-->
 
-<<<<<<< HEAD
     <section>
 
       <div class="row">
@@ -194,8 +179,6 @@
         </div> --><!--/span-->
       </div><!--/row-->
     </section>
-=======
->>>>>>> 58499f73e57d51268bd7421689749b594ce029d5
       <hr>
 
     </main><!--/.container-->
