--- a/2cards.html
+++ b/2cards.html
@@ -145,112 +145,100 @@
             <div class="col-md-12 placeholder type">
               <div class="row cards-section">
                 <div class="col-md-4 col-sm-3 placeholder">
-                  <a class="card"  href="#">
+                  <a class="card card-hover"  href="#">
                     <span class="topcard">
                       <p class="details-header p-responsive">ทุนการศึกษาเอสโซ่</p>
                       <p class="name-details-caption p-responsive">สมโภชกรุงรัตนโกสินทร์ 200 ปี</p>
                     </span>
                     <span class="bg-logo">
-                      <img src="images/Esso_textlogo.png">
+                      <img class="img-fluid" src="images/Esso_textlogo.png">
                     </span>
-                    <span class="caption-details">
-                      <p>จำนวนเงิน</p>
-                      <p>เปิดรับสมัคร</p>
+                    <span class="caption-details p-responsive" style="text-align: center;">
+                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
-                    <span>
-                      <p>10,000 บาท</p>
-                      <p>23 ส.ค. - 14 ก.ย. 2560</p>
+                  </a>
+                </div>
+                
+                <div class="col-md-4 col-sm-3 placeholder">
+                  <a class="card card-hover"  href="#">
+                    <span class="topcard">
+                      <p class="details-header p-responsive">ทุนการศึกษาคาวาซากิ</p>
+                      <p class="name-details-caption p-responsive"></p>
+                    </span>
+                    <span class="bg-logo">
+                      <img class="img-fluid" src="images/kawasaki.png">
+                    </span>
+                    <span class="caption-details p-responsive" style="text-align: center;">
+                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
                     </span>
                   </a>
                 </div>
 
                 <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">ทุนการศึกษาคาวาซากิ</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kawasaki.png">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
-                        </span>
-                      </a>
-                  </div>
+                  <a class="card card-hover"  href="#">
+                    <span class="topcard">
+                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="name-details-caption p-responsive">กยศ.</p>
+                    </span>
+                    <span class="bg-logo">
+                      <img class="img-fluid" src="images/kys.jpg">
+                    </span>
+                    <span class="caption-details p-responsive" style="text-align: center;">
+                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                    </span>
+                  </a>
                 </div>
 
                 <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
-                          <p class="name-details-caption">กยศ.</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kys.jpg">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
-                        </span>
-                      </a>
-                  </div>
+                  <a class="card card-hover"  href="#">
+                    <span class="topcard">
+                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="name-details-caption p-responsive">กยศ.</p>
+                    </span>
+                    <span class="bg-logo">
+                      <img class="img-fluid" src="images/kys.jpg">
+                    </span>
+                    <span class="caption-details p-responsive" style="text-align: center;">
+                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                    </span>
+                  </a>
                 </div>
 
                 <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
-                          <p class="name-details-caption">กยศ.</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kys.jpg">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
-                        </span>
-                      </a>
-                  </div>
+                  <a class="card card-hover"  href="#">
+                    <span class="topcard">
+                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="name-details-caption p-responsive">กยศ.</p>
+                    </span>
+                    <span class="bg-logo">
+                      <img class="img-fluid" src="images/kys.jpg">
+                    </span>
+                    <span class="caption-details p-responsive" style="text-align: center;">
+                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                    </span>
+                  </a>
                 </div>
 
-                <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
-                          <p class="name-details-caption">กยศ.</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kys.jpg">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
-                        </span>
-                      </a>
-                  </div>
-                </div>
 
                 <div class="col-md-4 col-sm-3 placeholder">
-                  <div>
-                      <a class="card" href="#">
-                        <span class="topcard">
-                          <p class="name-details">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
-                          <p class="name-details-caption">กยศ.</p>
-                        </span>
-                        <span class="bg-logo">
-                          <img src="images/kys.jpg">
-                        </span>
-                        <span class="caption-details">
-                          <p>จำนวนเงิน</p>
-                          <p>เปิดรับสมัคร</p>
-                        </span>
-                      </a>
-                  </div>
+                  <a class="card card-hover"  href="#">
+                    <span class="topcard">
+                      <p class="details-header p-responsive">กองทุนเงินกู้ยืมเพื่อการศึกษา</p>
+                      <p class="name-details-caption p-responsive">กยศ.</p>
+                    </span>
+                    <span class="bg-logo">
+                      <img class="img-fluid" src="images/kys.jpg">
+                    </span>
+                    <span class="caption-details p-responsive" style="text-align: center;">
+                      <p>จำนวนเงิน&nbsp;10,000 บาท</p>
+                      <p>เปิดรับสมัคร&nbsp;23 ส.ค. - 14 ก.ย. 2560</p>
+                    </span>
+                  </a>
                 </div>
 
               </div> <!-- to toggle -->
@@ -276,7 +264,7 @@
             <table>
               <tbody>
                 <tr class="row100 body">
-                  <td class="cell100 column1">ทุนด้านวิศวกรรมศาสตร์<br>โรงแรมแมนดารินโอเรียนเต็ลกรุงเทพฯ</td>
+                  <td class="cell100 column1"><a href="https://www.youtube.com/">ทุนด้านวิศวกรรมศาสตร์<br>โรงแรมแมนดารินโอเรียนเต็ลกรุงเทพฯ</a></td>
                   <td class="cell100 column2">วิศวกรรมศาสตร์</td>
                   <td class="cell100 column3">ทุนจ้างงาน</td>
                   <td class="cell100 column4">วันนี้ - 31 พ.ค. 2560</td>
